--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.13",
     "firebase": "^9.22.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -17,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.1",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.12",
     "swiper": "^9.4.1"
   },
   "devDependencies": {
