--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@tanstack/react-query": "^4.29.13",
     "axios": "^1.4.0",
     "firebase": "^9.22.2",
+    "framer-motion": "^10.12.17",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.45.0",
