--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^1.54.0",
     "@tanstack/react-query": "^4.29.13",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "firebase": "^9.22.2",
     "framer-motion": "^10.12.17",
     "localforage": "^1.10.0",
@@ -28,7 +29,7 @@
     "react-icons": "^4.9.0",
     "react-loader-spinner": "^5.3.4",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.12.1",
+    "react-router-dom": "^6.14.1",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.12",
@@ -44,7 +45,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "postcss": "^8.4.24",
+    "postcss": "^8.4.25",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.9"
   }
