--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "react-router-dom": "^6.14.1",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.7.12",
-    "swiper": "^9.4.1"
+    "sweetalert2": "^11.7.12"
+   
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
